--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   <header>
-  <div class="container-fluid d-flex justify-content-between flex-wrap align-items-center p-4"id="header">
+  <div class="container-fluid d-flex justify-content-between flex-wrap align-items-center p-4"id="header" style="padding: 0.5rem !important;">
   <div class="hel">Delivery on next-day from 10:00 AM to 8:00 PM</div>
   <div class="d-flex justify-content-between d-lg-block d-none">
   <ul class="nav flex-sm-column flex-md-row align-items-center ">
@@ -45,7 +45,7 @@
  </div>
  </div>
  </div>
-  <div class="container-fluid d-flex justify-content-between flex-wrap p-4 nav2"id="header-2">
+  <div class="container-fluid d-flex justify-content-between flex-wrap p-4 nav2"id="header-2" style="background-color: #EDF5EC;">
   <div><button type="button" onclick="english" class="button d-lg-block d-none">English</button></div>
   <div class="d-flex justify-content-between d-lg-block d-none">
   <ul class="d-flex flex-sm-column flex-md-row align-items-center nav2 ">
